# Multiple-agent-path-planning-and-optimization

./: .gitignore  README.md
core_ws/: .gitignore  fastdds_tcp.xml  run_multi_usv_batch.py
core_ws/src/model/: CMakeLists.txt  package.xml
core_ws/src/model/launch/: start_dave.launch.py
core_ws/src/model/models/meshes/: green_marine_navigation_buoy_game_ready.glb  ice_floes.glb
core_ws/src/model/models/singapore_river/: model.sdf
core_ws/src/model/models/vessel_e/: model.sdf
core_ws/src/model/models/vessel_f/: model.sdf
core_ws/src/model/rviz/: eca_a9.rviz
core_ws/src/model/urdf/: eca_a9_dave.urdf.xacro  heron_dave.urdf.xacro  vessel_e.urdf.xacro  vessel_f.urdf.xacro
core_ws/src/model/worlds/: dave_ocean_waves_fixed.world
core_ws/src/model/worlds/材料/Singapore River (Cropped out for Robot X 2026)/: model.config
core_ws/src/model/worlds/材料/Vessel E/: model.config
core_ws/src/multi_usv_planner/: CMakeLists.txt  README.md  package.xml
core_ws/src/multi_usv_planner/acados/: README.md  env.sh  model_definition.py
core_ws/src/multi_usv_planner/config/: usv_params_easy.yaml  usv_params_hard.yaml  usv_params_medium.yaml
core_ws/src/multi_usv_planner/include/multi_usv_planner/: acados_contouring_solver.h  acados_solver.h  colregs_engine.h  constraint_builder.h  controller.h  heron_single_node.h  mpc_solver.h  topology_selector.h  types.h  usv_planner.h
core_ws/src/multi_usv_planner/launch/: heron_single.launch.py  planner.launch.py  planner_notopo.launch.py  planner_single.launch.py
core_ws/src/multi_usv_planner/multi_usv_planner/: dynamic_obstacle_node.py  floating_debris_node.py
core_ws/src/multi_usv_planner/rviz/: planner.rviz
core_ws/src/multi_usv_planner/scripts/: generate_contouring_solver.py  run_experiments.py
core_ws/src/multi_usv_planner/src/: acados_contouring_solver.cpp  acados_solver.cpp  colregs_engine.cpp  constraint_builder.cpp  controller.cpp  heron_single_node.cpp  mpc_solver.cpp  scene_visualizer_node.cpp  topology_selector_node.cpp  usv_planner_node.cpp
core_ws/src/topology_interfaces/: CMakeLists.txt  package.xml
core_ws/src/topology_interfaces/msg/: Decision.msg  TopologicalPath.msg  TopologicalPathArray.msg
core_ws/src/topology_planner/: CMakeLists.txt  package.xml
core_ws/src/topology_planner/launch/: planner.launch.py
core_ws/src/topology_planner/rviz/: planner.rviz
core_ws/src/topology_planner/src/: prm_node.cpp
core_ws/src/tracking_control/: CMakeLists.txt  package.xml
core_ws/src/tracking_control/config/: sf_params.yaml
core_ws/src/tracking_control/launch/: start_control.launch.py
core_ws/src/tracking_control/src/: sf_local_tracking.cpp
core_ws/src/trajectory_smoother/: package.xml  setup.cfg  setup.py
core_ws/src/trajectory_smoother/config/: parameter.yaml
core_ws/src/trajectory_smoother/rviz/: demo_replay.rviz
core_ws/src/trajectory_smoother/trajectory_smoother/: demo_replay_node.py  kinematic_vessel_node.py  monte_carlo_eval.py  odom_tf_broadcaster.py  online_trajectory_visualizer.py  path_costs.py  perception_node.py  robot_description_publisher.py  smoother_node.py  smoother_params.py  usv_simulator.py
