<?xml version="1.0"?>
<package format="3">
  <name>multi_usv_planner</name>
  <version>0.1.0</version>
  <description>Multi-USV cooperative planner with contouring MPC and COLREGs</description>
  <maintainer email="lu@example.com">Lu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>topology_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libg2o</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>decomp_util</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
